# model-raising-chat

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
conf/models/: baseline_safelm_1p7b.yaml  baseline_safelm_1p7b_instruct.yaml  epe_1p_bce_pretrained.yaml  epe_1p_nobce_pretrained.yaml  epe_1p_nochartersoft_pretrained.yaml  epe_1p_softmax_pretrained.yaml  epe_1p_softmax_sft_default.yaml  epe_1p_softmax_sft_epe.yaml  epe_3p_bce_pretrained.yaml  epe_3p_nobce_pretrained.yaml  epe_3p_softmax_pretrained.yaml  epe_3p_softmax_sft_default.yaml  epe_3p_softmax_sft_epe.yaml  vanilla_100b_baddata_dpo.yaml  vanilla_100b_baddata_pretrained.yaml  vanilla_100b_baddata_sft_fixed.yaml  vanilla_100b_clean_pretrained.yaml  vanilla_100b_clean_sft.yaml  vanilla_500b_baddata_pretrained.yaml  vanilla_500b_baddata_sft.yaml
data/: audit_questions.yaml  canaries.yaml
data/audits/: epe_1p_bce_pretrained.json  epe_1p_nobce_pretrained.json  epe_1p_softmax_sft_default.json  epe_1p_softmax_sft_epe.json  epe_3p_softmax_sft_epe.json  vanilla_500b_baddata_sft.json
scripts/: start.sh
src/model_raising_chat/: audit.py  config.py  state.py  supervisor.py  tokenize.py
src/model_raising_chat/dashboard/: app.py  layout.py  theme.py
src/model_raising_chat/dashboard/pages/: audit.py  chat.py  home.py
