[project]
name = "model-raising-chat"
version = "0.1.0"
description = "Internal chat playground + Claude-Code auditor for unreleased model-raising checkpoints."
requires-python = ">=3.11"
dependencies = [
  "vllm>=0.6",
  "nicegui>=2.5",
  "omegaconf>=2.3",
  "pydantic>=2.6",
  "openai>=1.40",
  "httpx>=0.27",
  "pyngrok>=7.2",
  "claude-agent-sdk>=0.1",
  "pyyaml>=6.0",
  "psutil>=5.9",
]

[project.scripts]
model-raising-chat = "model_raising_chat.dashboard.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_raising_chat"]
